Fix mobile layout issues

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,8 +6,14 @@
   box-sizing: border-box;
 }
 
+html {
+  min-height: 100%;
+  background-color: var(--body-bg);
+}
+
 body {
   margin: 0;
+  min-height: 100vh;
   font-family: var(--body-font);
   font-size: var(--body-font-size);
   line-height: var(--body-line-height);
